--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "scripts": {
-    "build": "npx tsc"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/negar-ghorbani/weather-app-backend.git"
@@ -23,5 +21,7 @@
     "@types/node": "^18.11.19",
     "typescript": "^4.9.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap4-toggle": "^3.6.1"
+  }
 }
